Added sequential multiplier

--- a/multiplier/Makefile
+++ b/multiplier/Makefile
@@ -2,7 +2,8 @@
 proj_name 	= multiplier
 
 # Source files used
-source 		= simple_unsigned_multiplier.v
+source 		= simple_unsigned_multiplier.v \
+				seq_unsigned_multiplier.v
 
 # Testbench code
 testbench	= $(proj_name)_tb.v
