Change in intendation

--- a/pattern_detector_fsm/Makefile
+++ b/pattern_detector_fsm/Makefile
@@ -2,7 +2,7 @@
 proj_name 	= pattern_detector
 
 # Source files used
-source 		= three_ones.v
+# source 		= three_ones.v
 source		= parity.v
 
 # Testbench code
