Added radix 4 multiplier

--- a/multiplier/Makefile
+++ b/multiplier/Makefile
@@ -5,7 +5,8 @@ proj_name 	= multiplier
 source 		= simple_unsigned_multiplier.v \
 				seq_unsigned_multiplier.v \
 				streamlined_multiplier.v \
-				signed_streamlined_multiplier.v
+				signed_streamlined_multiplier.v \
+				radix_4_multiplier.v
 
 # Testbench code
 testbench	= $(proj_name)_tb.v
